# Best-Picture-Nominees-davidm3-

./: main.py  output.txt  pyproject.toml
